fix z-index for active button

--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,7 @@ html {
 .btn-secondary:active,
 .btn-secondary.active {
   background-color: #5a5a5a !important;
+  z-index: auto;
 }
 
 .footer {
